# MandelbrotGPU

./: CMakeLists.txt  Readme.md
Glitter/Headers/: GUI.hpp  Shader.hpp  Timer.hpp  glitter.hpp
Glitter/Shaders/: simple_shader.fs  simple_shader.vs
Glitter/Sources/: GUI.cpp  main.cpp
Glitter/Sources/gpu_src/: mandel.cl  test.cl
